--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1142,7 +1142,7 @@
             </ul>
             <div class="nav-buttons">
                 <a href="/dashboard" class="btn btn-secondary active">Dashboard</a>
-                <a href="https://discord.com/oauth2/authorize?client_id=1386396859261779988&permissions=8&integration_type=0&scope=bot&permissions=8" class="btn btn-primary">Add to Discord</a>
+                <a href="https://discord.com/oauth2/authorize?client_id=1393621951909462086&permissions=8&integration_type=0&scope=bot" class="btn btn-primary">Add to Discord</a>
                     </div>
             <div class="hamburger">
                 <span></span>
@@ -1553,7 +1553,7 @@
                             <li>Your Discord account needs to re-authenticate to refresh server permissions</li>
                         </ul>
                         <div style="display: flex; gap: 1rem; justify-content: center; flex-wrap: wrap;">
-                            <a href="https://discord.com/oauth2/authorize?client_id=1386396859261779988&permissions=8&integration_type=0&scope=bot&permissions=8" 
+                            <a href="https://discord.com/oauth2/authorize?client_id=1393621951909462086&permissions=8&integration_type=0&scope=bot" 
                                class="btn btn-primary" style="text-decoration: none;">
                                 <i class="fab fa-discord"></i>
                                 Add ForensicByte | Security™ to Your Server
